--- a/locale-theme/fr/app.po
+++ b/locale-theme/fr/app.po
@@ -1,3 +1,23 @@
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+#
+# Translators:
+# mySociety <transifex@mysociety.org>, 2014
+msgid ""
+msgstr ""
+"Project-Id-Version: alaveteli\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2014-12-11 14:48+0000\n"
+"PO-Revision-Date: 2014-12-11 15:08+0000\n"
+"Last-Translator: mySociety <transifex@mysociety.org>\n"
+"Language-Team: French (http://www.transifex.com/projects/p/sobanukirwa-theme/language/fr/)\n"
+"Language: fr\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+
 msgid "(hide)"
 msgstr ""
 
@@ -29,7 +49,7 @@ msgid "Browse <a href='{{url}}'>other requests</a> to '{{public_body_name}}' for
 msgstr ""
 
 msgid "Browse requests"
-msgstr "L'acces a une information"
+msgstr ""
 
 msgid "Contact us"
 msgstr ""
