--- a/locale-theme/rw/app.po
+++ b/locale-theme/rw/app.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 #
 # Translators:
+# mySociety <transifex@mysociety.org>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: alaveteli\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-01-16 11:26+0000\n"
-"PO-Revision-Date: 2015-01-16 07:06+0000\n"
-"Last-Translator: Stephen Abbott Pugh <stephendabbott@gmail.com>\n"
+"PO-Revision-Date: 2015-01-16 11:35+0000\n"
+"Last-Translator: mySociety <transifex@mysociety.org>\n"
 "Language-Team: Kinyarwanda (http://www.transifex.com/projects/p/sobanukirwa-theme/language/rw/)\n"
 "Language: rw\n"
 "MIME-Version: 1.0\n"
@@ -84,7 +85,7 @@ msgid "If you're new to {{site_name}}"
 msgstr "Niba ari ubwa mbere ukoresheje {{site_name}}"
 
 msgid "In partnership with"
-msgstr ""
+msgstr "Ku bufatanye na"
 
 msgid "Information on emissions and discharges (e.g. noise, energy,\\n            radiation, waste materials)"
 msgstr "Amakuru ku bihumanya  (urugero: urusaku, ibikomoka ku ngufu,\\n            ibyuka bihumanya, imyanda)"
@@ -193,9 +194,3 @@ msgstr "Incamake y'umurongo umwe ivuga amakuru uri kubaza \\n\t\t\te.g."
 
 msgid "{{existing_request_user}} already\\n      created the same request on {{date}}. You can either view the <a href=\"{{existing_request}}\">existing request</a>,\\n      or edit the details below to make a new but similar request."
 msgstr "{{existing_request_user}} wamaze\\n      gutanga icyo kibazo kuwa {{date}}. Ushobora kureba <a href=\"{{existing_request}}\">ikibazo gisanzwe</a>,\\n      cyangwa se ugahindura ibisobanuro bikurikira ugatanga ikindi ikibazo gisa na cyakindi."
-
-#~ msgid "This is an FOI request done via the {{site_name}} website. This footer has been overriden by the sample Alaveteli theme."
-#~ msgstr "Iki ni ikibazo cy'Ubwisanzure bwo kumenya amakuru cyatanzwe hakoreshejwe urubuga {{site_name}}. Urugero rw'insanganyamatsiko ya Alaveteli yapfutse iki igice cyo hasi cy'urupapuro."
-
-#~ msgid "With the help of"
-#~ msgstr "Ku bufasha bwa"
