--- a/locale-theme/rw/app.po
+++ b/locale-theme/rw/app.po
@@ -3,13 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 #
 # Translators:
+# Clarisse Umutesi Mwitegereze <clarisse@mediae.org>, 2015
 # mySociety <transifex@mysociety.org>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: alaveteli\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-01-16 11:26+0000\n"
-"PO-Revision-Date: 2015-01-16 11:35+0000\n"
+"POT-Creation-Date: 2015-01-21 10:40+0000\n"
+"PO-Revision-Date: 2015-01-21 10:48+0000\n"
 "Last-Translator: mySociety <transifex@mysociety.org>\n"
 "Language-Team: Kinyarwanda (http://www.transifex.com/projects/p/sobanukirwa-theme/language/rw/)\n"
 "Language: rw\n"
@@ -57,8 +58,8 @@ msgstr "Twandikire"
 msgid "Cultural sites and built structures (as they may be affected by the\\n            environmental factors listed above)"
 msgstr "Ahantu ndanga mateka n'ahubatswe (kuko hashobora gukorwaho \\n            n'amategeko agenga ibidukikije ari haruguru)"
 
-msgid "Every citizen has the right to access information held by public authorities.<strong>By law, they have to respond</strong>. <a href={{help_url}}>Find out more about Access to Information.</a>"
-msgstr "Buri muturage afite uburenganzira bwo guhabwa amakuru afitwe n'abayobozi.<strong>Mu mategeko, bagomba gusubiza</strong>. <a href={{help_url}}>Menya ibindi ku guhabwa amakuru.</a>"
+msgid "Every citizen has the right to access information held by public authorities and some private bodies. <strong>By law, they have to respond</strong>. \\<a href={{help_url}}>Find out more about Access to Information.</a>"
+msgstr "Buri muturage afite uburenganzira bwo guhabwa amakuru afitwe n'abayobozi ndetse n'imiryango yigenga.<strong>Mu mategeko, bagomba gusubiza</strong>. <a href={{help_url}}>Menya ibindi ku guhabwa amakuru.</a>"
 
 msgid "Everything that you enter on this page, including <strong>your name</strong>,\\n                will be <strong>displayed publicly</strong> on\\n                this website forever (<a href=\"{{url}}\">why?</a>)."
 msgstr "Ibintu byose ushyira kuri uru rubuga, harimo <strong>amazina yawe</strong>,\\n                bizajya <strong>bigaragarira buri wese</strong> kuri\\n                uru rubuga iteka ryose (<a href=\"{{url}}\">why?</a>)."
