Fix translations added in 8750d2dd

--- a/locale-theme/app.pot
+++ b/locale-theme/app.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: version 0.0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-01-21 10:40+0000\n"
+"POT-Creation-Date: 2015-01-21 14:52+0000\n"
 "PO-Revision-Date: 2014-12-09 15:21+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -57,7 +57,7 @@ msgstr ""
 msgid "Cultural sites and built structures (as they may be affected by the\\n            environmental factors listed above)"
 msgstr ""
 
-msgid "Every citizen has the right to access information held by public authorities and some private bodies. <strong>By law, they have to respond</strong>. \\<a href={{help_url}}>Find out more about Access to Information.</a>"
+msgid "Every citizen has the right to access information held by public authorities and some private bodies. <strong>By law, they have to respond</strong>. <a href={{help_url}}>Find out more about Access to Information.</a>"
 msgstr ""
 
 msgid "Everything that you enter on this page, including <strong>your name</strong>,\\n                will be <strong>displayed publicly</strong> on\\n                this website forever (<a href=\"{{url}}\">why?</a>)."
