Update footer wording

--- a/locale-theme/fr/app.po
+++ b/locale-theme/fr/app.po
@@ -4,15 +4,16 @@
 #
 # Translators:
 # Clarisse Umutesi Mwitegereze <clarisse@mediae.org>, 2015
+# Gareth Rees <gareth@mysociety.org>, 2015
 # mySociety <transifex@mysociety.org>, 2014-2015
 # Stephen Abbott Pugh <stephendabbott@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: alaveteli\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-01-21 14:52+0000\n"
-"PO-Revision-Date: 2015-01-25 14:50+0000\n"
-"Last-Translator: Stephen Abbott Pugh <stephendabbott@gmail.com>\n"
+"POT-Creation-Date: 2015-02-09 13:15+0000\n"
+"PO-Revision-Date: 2015-02-09 13:18+0000\n"
+"Last-Translator: Gareth Rees <gareth@mysociety.org>\n"
 "Language-Team: French (http://www.transifex.com/projects/p/sobanukirwa-theme/language/fr/)\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
@@ -53,6 +54,9 @@ msgstr "Parcourir <a href='{{url}}'>d'autres demandes</a> à '{{public_body_name
 msgid "Browse requests"
 msgstr "Parcourir les demandes"
 
+msgid "Co-created by"
+msgstr "Ku bufutanye na"
+
 msgid "Contact us"
 msgstr "Nous contacter"
 
@@ -91,9 +95,6 @@ msgstr "J'aimerai accéder cette information comme prévoit la loi numero 04/201
 
 msgid "If you're new to {{site_name}}"
 msgstr "Si vous êtes nouveau {{site_name}}"
-
-msgid "In partnership with"
-msgstr "En partenariat avec"
 
 msgid "Information on emissions and discharges (e.g. noise, energy,\\n            radiation, waste materials)"
 msgstr "Informations sur les émissions et rejets (par exemple, le bruit, l'énergie, \\n            radiations, déchets)"
