--- a/locale-theme/fr/app.po
+++ b/locale-theme/fr/app.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: alaveteli\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-02-09 13:15+0000\n"
-"PO-Revision-Date: 2015-02-09 13:18+0000\n"
+"PO-Revision-Date: 2015-02-09 14:40+0000\n"
 "Last-Translator: Gareth Rees <gareth@mysociety.org>\n"
 "Language-Team: French (http://www.transifex.com/projects/p/sobanukirwa-theme/language/fr/)\n"
 "Language: fr\n"
@@ -55,7 +55,7 @@ msgid "Browse requests"
 msgstr "Parcourir les demandes"
 
 msgid "Co-created by"
-msgstr "Ku bufutanye na"
+msgstr "Co-créé par"
 
 msgid "Contact us"
 msgstr "Nous contacter"
