--- a/locale-theme/rw/app.po
+++ b/locale-theme/rw/app.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: alaveteli\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-02-09 13:15+0000\n"
-"PO-Revision-Date: 2015-02-09 13:18+0000\n"
+"PO-Revision-Date: 2015-02-09 14:41+0000\n"
 "Last-Translator: Gareth Rees <gareth@mysociety.org>\n"
 "Language-Team: Kinyarwanda (http://www.transifex.com/projects/p/sobanukirwa-theme/language/rw/)\n"
 "Language: rw\n"
@@ -55,7 +55,7 @@ msgid "Browse requests"
 msgstr "Shaka ibibazo"
 
 msgid "Co-created by"
-msgstr "Co-créé par"
+msgstr "Ku bufutanye na"
 
 msgid "Contact us"
 msgstr "Twandikire"
