--- a/locale-theme/fr/app.po
+++ b/locale-theme/fr/app.po
@@ -11,8 +11,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: alaveteli\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-02-09 13:15+0000\n"
-"PO-Revision-Date: 2015-02-09 14:40+0000\n"
+"POT-Creation-Date: 2015-04-16 09:16+0000\n"
+"PO-Revision-Date: 2015-04-16 09:17+0000\n"
 "Last-Translator: Gareth Rees <gareth@mysociety.org>\n"
 "Language-Team: French (http://www.transifex.com/projects/p/sobanukirwa-theme/language/fr/)\n"
 "Language: fr\n"
@@ -35,9 +35,6 @@ msgstr "<strong> Puis-je demander des informations sur moi-même?</strong>\\n⇥
 
 msgid "<strong>There may be risks associated with using your real name.</strong> <a href=\"{{help_url}}\">Read our advice</a> about using a pseudonym."
 msgstr "<strong>Il peut y avoir des risques liés à l'utilisation de votre vrai nom.</strong> <a href=\"{{help_url}}\">Lisez notre conseil</a> sur l'usage d'un pseudonyme."
-
-msgid "A project by"
-msgstr "Un projet de"
 
 msgid "Air, water, soil, land, flora and fauna (including how these effect\\n            human beings)"
 msgstr "L'air, l'eau, le sol, la terre, la flore et la faune (incluant comment ils affectent\\n des être humains)"
@@ -152,6 +149,9 @@ msgstr "Remarque spéciale pour cette autorité!"
 
 msgid "Summary:"
 msgstr "Résumé:"
+
+msgid "Supported by"
+msgstr "Soutenu par"
 
 msgid "Tags (separated by a space):"
 msgstr "Tags (mots clés, séparés par un espace )"
